# vulkan-ADT

./: CMakeCache.txt  CMakeLists.txt  Makefile  NOTICE.txt  README.md  VkDebugger  cmake_install.cmake  details_layer_windows.json  libvkDebugger_linux.json  vkDebugger_windows.json  vkGen
appUI/: LICENSE  appUI.cpp  appUI.h  appUI.hpp  appWindow.cpp  appWindow.hpp  callbacks.cpp  callbacks.h  class_apiCall.cpp  class_apiCall.hpp  class_buffer.cpp  class_buffer.hpp  class_image.cpp  class_image.hpp  class_memory.cpp  class_memory.hpp  class_system.cpp  class_system.hpp  events.cpp  events.h  events.hpp  layerReceiver.cpp  layerReceiver.hpp  main.cpp  winsock.cpp  winsock.h
layer/: LICENSE  generatedPart.example  layer.cpp  layer.h  layer.hpp  layer_data.cpp  layer_data.hpp  layer_generated.cpp  layer_generated.h  layer_messages.cpp  layer_messages.h  layer_static.cpp  winsock.cpp  winsock.h
layergen/: layer_generator.cpp  layer_generator.hpp  layer_xml_parser.cpp  layer_xml_parser.hpp  main.cpp  vk_layer_dispatch_table.h
libs/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/docs/: Makefile  cmake_install.cmake
libs/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  triangle-opengles  wave  windows
libs/glfw/src/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/glfw/tests/: Makefile  allocator  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  reopen  tearing  threads  timeout  title  triangle-vulkan  window
libs/imgui/examples/example_glfw_opengl2/: main.cpp
libs/vulkan1.3.261.1/: InstallationLog.txt  maintenancetool.ini
libs/vulkan1.3.261.1/Templates/: components.xml
libs/vulkanSDK/vulkan/include/vulkan/: vulkan_profiles.hpp
licenses/: LICENSE_LICENSE-2.0
